<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/fav"
        android:title="@string/fav"
        android:icon="@drawable/ic_baseline_favorite_putih"
        app:showAsAction="always">
    </item>
    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        android:icon="@drawable/ic_baseline_settings_24"
        app:showAsAction="always">
    </item>
</menu>